WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170459
Don't need to Air::reportUsedRegisters for wasm at -O1
https://bugs.webkit.org/show_bug.cgi?id=170459
Summary
Don't need to Air::reportUsedRegisters for wasm at -O1
Filip Pizlo
Reported
2017-04-04 11:08:17 PDT
Patch forthcoming.
Attachments
the patch
(19.12 KB, patch)
2017-04-04 11:19 PDT
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2017-04-04 11:19:43 PDT
Created
attachment 306181
[details]
the patch
Saam Barati
Comment 2
2017-04-04 11:39:33 PDT
Comment on
attachment 306181
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=306181&action=review
r=me
> Source/JavaScriptCore/b3/B3StackmapGenerationParams.h:63 > + // NOTE: This will report bogus information if you did proc.setNeedsUsedRegisters(false).
Can we make it crash, at least in debug builds?
> Source/JavaScriptCore/b3/air/AirLiveness.h:42 > + SuperSamplerScope samplingScope(false); > + WTF::Liveness<Adapter>::compute();
Is the reason for this change just so you can time it?
Filip Pizlo
Comment 3
2017-04-04 11:49:05 PDT
(In reply to Saam Barati from
comment #2
)
> Comment on
attachment 306181
[details]
> the patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=306181&action=review
> > r=me > > > Source/JavaScriptCore/b3/B3StackmapGenerationParams.h:63 > > + // NOTE: This will report bogus information if you did proc.setNeedsUsedRegisters(false). > > Can we make it crash, at least in debug builds?
I'll add an assertion.
> > > Source/JavaScriptCore/b3/air/AirLiveness.h:42 > > + SuperSamplerScope samplingScope(false); > > + WTF::Liveness<Adapter>::compute(); > > Is the reason for this change just so you can time it?
Yeah, it was just for timing. There was a prior patch where I had done this same hack and then lost it. It's super useful.
Filip Pizlo
Comment 4
2017-04-04 12:09:29 PDT
Landed in
https://trac.webkit.org/changeset/214887/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug