Source/JavaScriptCore/b3/B3StackmapGenerationParams.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2015-2016 Apple Inc. All rights reserved.
+ * Copyright (C) 2015-2017 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -38,6 +38,8 @@ using namespace Air;
 
 const RegisterSet& StackmapGenerationParams::usedRegisters() const
 {
+    ASSERT(m_context.code->needsUsedRegisters());
+    
     return m_value->m_usedRegisters;
 }
 
