Source/WTF/wtf/Liveness.h
@@ -49,103 +49,8 @@ public:
         , m_liveAtHead(cfg.template newMap<IndexVector>())
         , m_liveAtTail(cfg.template newMap<IndexVector>())
     {
-        // The liveAtTail of each block automatically contains the LateUse's of the terminal.
-        for (unsigned blockIndex = m_cfg.numNodes(); blockIndex--;) {
-            typename CFG::Node block = m_cfg.node(blockIndex);
-            if (!block)
-                continue;
-            
-            IndexVector& liveAtTail = m_liveAtTail[block];
-
-            Adapter::forEachUse(
-                block, Adapter::blockSize(block),
-                [&] (unsigned index) {
-                    liveAtTail.append(index);
-                });
-            
-            std::sort(liveAtTail.begin(), liveAtTail.end());
-            removeRepeatedElements(liveAtTail);
-        }
-
-        // Blocks with new live values at tail.
-        BitVector dirtyBlocks;
-        for (size_t blockIndex = m_cfg.numNodes(); blockIndex--;)
-            dirtyBlocks.set(blockIndex);
-        
-        IndexVector mergeBuffer;
-        
-        bool changed;
-        do {
-            changed = false;
-
-            for (size_t blockIndex = m_cfg.numNodes(); blockIndex--;) {
-                typename CFG::Node block = m_cfg.node(blockIndex);
-                if (!block)
-                    continue;
-
-                if (!dirtyBlocks.quickClear(blockIndex))
-                    continue;
-
-                LocalCalc localCalc(*this, block);
-                for (size_t instIndex = Adapter::blockSize(block); instIndex--;)
-                    localCalc.execute(instIndex);
-
-                // Handle the early def's of the first instruction.
-                Adapter::forEachDef(
-                    block, 0,
-                    [&] (unsigned index) {
-                        m_workset.remove(index);
-                    });
-
-                IndexVector& liveAtHead = m_liveAtHead[block];
-
-                // We only care about Tmps that were discovered in this iteration. It is impossible
-                // to remove a live value from the head.
-                // We remove all the values we already knew about so that we only have to deal with
-                // what is new in LiveAtHead.
-                if (m_workset.size() == liveAtHead.size())
-                    m_workset.clear();
-                else {
-                    for (unsigned liveIndexAtHead : liveAtHead)
-                        m_workset.remove(liveIndexAtHead);
-                }
-
-                if (m_workset.isEmpty())
-                    continue;
-
-                liveAtHead.reserveCapacity(liveAtHead.size() + m_workset.size());
-                for (unsigned newValue : m_workset)
-                    liveAtHead.uncheckedAppend(newValue);
-                
-                m_workset.sort();
-                
-                for (typename CFG::Node predecessor : m_cfg.predecessors(block)) {
-                    IndexVector& liveAtTail = m_liveAtTail[predecessor];
-                    
-                    if (liveAtTail.isEmpty())
-                        liveAtTail = m_workset.values();
-                    else {
-                        mergeBuffer.resize(liveAtTail.size() + m_workset.size());
-                        auto iter = mergeDeduplicatedSorted(
-                            liveAtTail.begin(), liveAtTail.end(),
-                            m_workset.begin(), m_workset.end(),
-                            mergeBuffer.begin());
-                        mergeBuffer.resize(iter - mergeBuffer.begin());
-                        
-                        if (mergeBuffer.size() == liveAtTail.size())
-                            continue;
-                    
-                        RELEASE_ASSERT(mergeBuffer.size() > liveAtTail.size());
-                        liveAtTail = mergeBuffer;
-                    }
-                    
-                    dirtyBlocks.quickSet(predecessor->index());
-                    changed = true;
-                }
-            }
-        } while (changed);
     }
-
+    
     // This calculator has to be run in reverse.
     class LocalCalc {
     public:
@@ -348,6 +253,106 @@ public:
     };
     
     LiveAtHead liveAtHead() { return LiveAtHead(*this); }
+
+protected:
+    void compute()
+    {
+        // The liveAtTail of each block automatically contains the LateUse's of the terminal.
+        for (unsigned blockIndex = m_cfg.numNodes(); blockIndex--;) {
+            typename CFG::Node block = m_cfg.node(blockIndex);
+            if (!block)
+                continue;
+            
+            IndexVector& liveAtTail = m_liveAtTail[block];
+
+            Adapter::forEachUse(
+                block, Adapter::blockSize(block),
+                [&] (unsigned index) {
+                    liveAtTail.append(index);
+                });
+            
+            std::sort(liveAtTail.begin(), liveAtTail.end());
+            removeRepeatedElements(liveAtTail);
+        }
+
+        // Blocks with new live values at tail.
+        BitVector dirtyBlocks;
+        for (size_t blockIndex = m_cfg.numNodes(); blockIndex--;)
+            dirtyBlocks.set(blockIndex);
+        
+        IndexVector mergeBuffer;
+        
+        bool changed;
+        do {
+            changed = false;
+
+            for (size_t blockIndex = m_cfg.numNodes(); blockIndex--;) {
+                typename CFG::Node block = m_cfg.node(blockIndex);
+                if (!block)
+                    continue;
+
+                if (!dirtyBlocks.quickClear(blockIndex))
+                    continue;
+
+                LocalCalc localCalc(*this, block);
+                for (size_t instIndex = Adapter::blockSize(block); instIndex--;)
+                    localCalc.execute(instIndex);
+
+                // Handle the early def's of the first instruction.
+                Adapter::forEachDef(
+                    block, 0,
+                    [&] (unsigned index) {
+                        m_workset.remove(index);
+                    });
+
+                IndexVector& liveAtHead = m_liveAtHead[block];
+
+                // We only care about Tmps that were discovered in this iteration. It is impossible
+                // to remove a live value from the head.
+                // We remove all the values we already knew about so that we only have to deal with
+                // what is new in LiveAtHead.
+                if (m_workset.size() == liveAtHead.size())
+                    m_workset.clear();
+                else {
+                    for (unsigned liveIndexAtHead : liveAtHead)
+                        m_workset.remove(liveIndexAtHead);
+                }
+
+                if (m_workset.isEmpty())
+                    continue;
+
+                liveAtHead.reserveCapacity(liveAtHead.size() + m_workset.size());
+                for (unsigned newValue : m_workset)
+                    liveAtHead.uncheckedAppend(newValue);
+                
+                m_workset.sort();
+                
+                for (typename CFG::Node predecessor : m_cfg.predecessors(block)) {
+                    IndexVector& liveAtTail = m_liveAtTail[predecessor];
+                    
+                    if (liveAtTail.isEmpty())
+                        liveAtTail = m_workset.values();
+                    else {
+                        mergeBuffer.resize(liveAtTail.size() + m_workset.size());
+                        auto iter = mergeDeduplicatedSorted(
+                            liveAtTail.begin(), liveAtTail.end(),
+                            m_workset.begin(), m_workset.end(),
+                            mergeBuffer.begin());
+                        mergeBuffer.resize(iter - mergeBuffer.begin());
+                        
+                        if (mergeBuffer.size() == liveAtTail.size())
+                            continue;
+                    
+                        RELEASE_ASSERT(mergeBuffer.size() > liveAtTail.size());
+                        liveAtTail = mergeBuffer;
+                    }
+                    
+                    dirtyBlocks.quickSet(predecessor->index());
+                    changed = true;
+                }
+            }
+        } while (changed);
+    }
 
 private:
     friend class LocalCalc;
